Agregado de terminos claves para camapaña google ads

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -5,6 +5,14 @@ footer {
   color: white;
 }
 
+footer span {
+  cursor: pointer;
+}
+
+footer span:hover {
+  opacity: 0.6;
+}
+
 .logo {
   width: 50% !important;
   margin: auto;
