--- a/src/components/featured-products.css
+++ b/src/components/featured-products.css
@@ -64,6 +64,10 @@
 @media (min-width: 501px) {
   .featured_products .content_product p {
     font-size: 0.7rem;
+    min-height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .featured_products .content_product button {
