--- a/src/components/formulario.css
+++ b/src/components/formulario.css
@@ -130,7 +130,7 @@
 .content_form #send {
   width: 100%;
   background: var(--secondary-color) !important;
-  color: black;
+  color: white;
   font-weight: 700;
   margin-top: 30px;
   border: none;
